added new user tests and fixed some bugs